--- a/api/pom.xml
+++ b/api/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>ch.heig.dai.lab.http</groupId>
-  <artifactId>code</artifactId>
+  <artifactId>api</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>http-infrastructure</name>
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.13.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
