--- a/webServer/docker/compose.yaml
+++ b/webServer/docker/compose.yaml
@@ -1,10 +1,37 @@
 services:
-  web:
-    build: .
+
+  reverse_proxy:
+    image: traefik:2.3.0
+    command:
+      - --log.level=INFO
+      - --api.insecure=true
+      - --entrypoints.web.address=:80
+      - --providers.docker
+
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+
+    labels:
+      traefik.http.routers.dash.rule: Host(`dash.localhost`)
+      traefik.http.routers.dash.service: api@internal
+
     ports:
-      - '7080:80'
+      - '80:80'
+
+
+  website:
+    image: web_static
+    labels:
+      traefik.enable: true
+      traefik.http.routers.website.rule: Host(`localhost`)
+    depends_on:
+      - reverse_proxy
+
   api:
     image: web_api
     container_name: web_api_container
-    ports:
-      - '9292:9292'
+    labels:
+      traefik.enable: true
+      traefik.http.routers.api.rule: Host(`localhost`) && PathPrefix(`/api`)
+    depends_on:
+      - reverse_proxy
