--- a/webServer/docker/compose.yaml
+++ b/webServer/docker/compose.yaml
@@ -25,6 +25,8 @@ services:
     labels:
       traefik.enable: true
       traefik.http.routers.website.rule: Host(`localhost`)
+    deploy:
+      replicas: 5
     depends_on:
       - reverse_proxy
 
@@ -34,5 +36,7 @@ services:
     labels:
       traefik.enable: true
       traefik.http.routers.api.rule: Host(`localhost`) && PathPrefix(`/api`)
+    deploy:
+      replicas: 5
     depends_on:
       - reverse_proxy
