--- a/webServer/docker/compose.yaml
+++ b/webServer/docker/compose.yaml
@@ -4,16 +4,19 @@ services:
     image: traefik:2.3.0
     command:
       - --log.level=INFO
-      - --api.insecure=true
       - --entrypoints.web.address=:80
       - --providers.docker
 
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      # Mounting the certificate and the key
+      - ./cert:/etc/traefik/certificates
 
     labels:
+      traefik.provides.docker: true
+      traefik.http.routers.dash.entrypoints: "websecure"
       traefik.http.routers.dash.rule: Host(`dash.localhost`)
-      traefik.http.routers.dash.service: api@internal
+      traefik.http.services.dash.tls: true
 
     ports:
       - '80:80'
@@ -21,10 +24,12 @@ services:
 
   website:
     image: web_static
-    container_name: web_static_website
+    # container_name: web_static_website
     labels:
       traefik.enable: true
+      traefik.http.routers.api.entrypoints: "websecure"
       traefik.http.routers.website.rule: Host(`localhost`)
+      traefik.http.services.api.tls: true
     deploy:
       replicas: 5
     depends_on:
@@ -32,12 +37,14 @@ services:
 
   api:
     image: web_api
-    container_name: web_api_container
+    # container_name: web_api_container
     labels:
       traefik.enable: true
+      traefik.http.routers.api.entrypoints: "websecure"
       traefik.http.routers.api.rule: Host(`localhost`) && PathPrefix(`/api`)
       traefik.http.services.api.loadBalancer.sticky.cookie: true
       traefik.http.services.api.loadBalancer.sticky.cookie.name: web_api_cookie
+      traefik.http.services.api.tls: true
     deploy:
       replicas: 5
     depends_on:
