--- a/webServer/docker/compose.yaml
+++ b/webServer/docker/compose.yaml
@@ -21,7 +21,7 @@ services:
 
   website:
     image: web_static
-    container_name: web_static_website
+    # container_name: web_static_website
     labels:
       traefik.enable: true
       traefik.http.routers.website.rule: Host(`localhost`)
@@ -32,7 +32,7 @@ services:
 
   api:
     image: web_api
-    container_name: web_api_container
+    # container_name: web_api_container
     labels:
       traefik.enable: true
       traefik.http.routers.api.rule: Host(`localhost`) && PathPrefix(`/api`)
