--- a/webServer/docker/compose.yaml
+++ b/webServer/docker/compose.yaml
@@ -6,20 +6,23 @@ services:
       - --log.level=INFO
       - --entrypoints.web.address=:80
       - --providers.docker
+      - --
 
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       # Mounting the certificate and the key
       - ./cert:/etc/traefik/certificates
+      # Mounting the configuration file
+      - ./traefik.yaml:/etc/traefik/traefik.yaml
 
     labels:
-      traefik.provides.docker: true
       traefik.http.routers.dash.entrypoints: "websecure"
       traefik.http.routers.dash.rule: Host(`dash.localhost`)
-      traefik.http.services.dash.tls: true
+      traefik.http.routers.dash.tls: true
 
     ports:
       - '80:80'
+      - '443:443'
 
 
   website:
@@ -29,7 +32,7 @@ services:
       traefik.enable: true
       traefik.http.routers.api.entrypoints: "websecure"
       traefik.http.routers.website.rule: Host(`localhost`)
-      traefik.http.services.api.tls: true
+      traefik.http.routers.api.tls: true
     deploy:
       replicas: 5
     depends_on:
@@ -44,7 +47,7 @@ services:
       traefik.http.routers.api.rule: Host(`localhost`) && PathPrefix(`/api`)
       traefik.http.services.api.loadBalancer.sticky.cookie: true
       traefik.http.services.api.loadBalancer.sticky.cookie.name: web_api_cookie
-      traefik.http.services.api.tls: true
+      traefik.http.routers.api.tls: true
     deploy:
       replicas: 5
     depends_on:
