--- a/webServer/docker/compose.yaml
+++ b/webServer/docker/compose.yaml
@@ -25,24 +25,24 @@ services:
     # container_name: web_static_website
     labels:
       traefik.enable: true
-      traefik.http.routers.api.entrypoints: "websecure"
+      traefik.http.routers.website.entrypoints: "websecure"
       traefik.http.routers.website.rule: Host(`localhost`)
-      traefik.http.routers.api.tls: true
+      traefik.http.routers.website.tls: true
     deploy:
       replicas: 5
     depends_on:
       - reverse_proxy
 
-  api:
+  web_api:
     image: web_api
     # container_name: web_api_container
     labels:
       traefik.enable: true
-      traefik.http.routers.api.entrypoints: "websecure"
-      traefik.http.routers.api.rule: Host(`localhost`) && PathPrefix(`/api`)
-      traefik.http.services.api.loadBalancer.sticky.cookie: true
-      traefik.http.services.api.loadBalancer.sticky.cookie.name: web_api_cookie
-      traefik.http.routers.api.tls: true
+      traefik.http.routers.web_api.entrypoints: "websecure"
+      traefik.http.routers.web_api.rule: Host(`localhost`) && PathPrefix(`/api`)
+      traefik.http.services.web_api.loadBalancer.sticky.cookie: true
+      traefik.http.services.web_api.loadBalancer.sticky.cookie.name: web_api_cookie
+      traefik.http.routers.web_api.tls: true
     deploy:
       replicas: 5
     depends_on:
