--- a/webServer/docker/compose.yaml
+++ b/webServer/docker/compose.yaml
@@ -3,7 +3,7 @@ services:
   reverse_proxy:
     image: traefik:2.3.0
     command:
-      - --log.level=INFO
+      - --log.level=DEBUG
       - --api.insecure=true
       - --entrypoints.web.address=:80
       - --providers.docker
@@ -21,7 +21,7 @@ services:
 
   website:
     image: web_static
-    container_name: web_static_website
+    # container_name: web_static_website
     labels:
       traefik.enable: true
       traefik.http.routers.website.rule: Host(`localhost`)
@@ -30,14 +30,15 @@ services:
     depends_on:
       - reverse_proxy
 
-  api:
+  web_api:
     image: web_api
-    container_name: web_api_container
+    # container_name: web_api_container
     labels:
       traefik.enable: true
-      traefik.http.routers.api.rule: Host(`localhost`) && PathPrefix(`/api`)
-      traefik.http.services.api.loadBalancer.sticky.cookie: true
-      traefik.http.services.api.loadBalancer.sticky.cookie.name: web_api_cookie
+      traefik.http.routers.web_api.rule: Host(`localhost`) && PathPrefix(`/api`)
+      traefik.http.services.web_api.loadBalancer.server.port: 9292
+      traefik.http.services.web_api.loadBalancer.sticky.cookie: true
+      traefik.http.services.web_api.loadBalancer.sticky.cookie.name: web_api_cookie
     deploy:
       replicas: 5
     depends_on:
