--- a/webServer/docker/compose.yaml
+++ b/webServer/docker/compose.yaml
@@ -19,10 +19,27 @@ services:
       - '80:80'
       - '443:443'
 
+  portainer:
+    image: portainer/portainer-ce:latest
+    container_name: portainer
+    restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./portainer-data:/data
+    labels:
+      traefik.enable: true
+      traefik.http.routers.portainer.rule: Host(`portainer.localhost`)
+      traefik.http.routers.portainer.entrypoints: "websecure"
+      traefik.http.services.portainer.loadbalancer.server.port: 9000
+
+    depends_on:
+      - reverse_proxy
 
   website:
-    image: web_static
-    # container_name: web_static_website
+    build: ./website
     labels:
       traefik.enable: true
       traefik.http.routers.website.entrypoints: "websecure"
@@ -34,12 +51,12 @@ services:
       - reverse_proxy
 
   web_api:
-    image: web_api
-    # container_name: web_api_container
+    build: ./api
     labels:
       traefik.enable: true
       traefik.http.routers.web_api.entrypoints: "websecure"
       traefik.http.routers.web_api.rule: Host(`localhost`) && PathPrefix(`/api`)
+      traefik.http.services.portainer.loadbalancer.server.port: 9000
       traefik.http.services.web_api.loadBalancer.sticky.cookie: true
       traefik.http.services.web_api.loadBalancer.sticky.cookie.name: web_api_cookie
       traefik.http.routers.web_api.tls: true
