--- a/webServer/docker/compose.yaml
+++ b/webServer/docker/compose.yaml
@@ -34,6 +34,7 @@ services:
       traefik.http.routers.portainer.rule: Host(`portainer.localhost`)
       traefik.http.routers.portainer.entrypoints: "websecure"
       traefik.http.services.portainer.loadbalancer.server.port: 9000
+      traefik.http.routers.portainer.tls: true
 
     depends_on:
       - reverse_proxy
@@ -46,21 +47,20 @@ services:
       traefik.http.routers.website.rule: Host(`localhost`)
       traefik.http.routers.website.tls: true
     deploy:
-      replicas: 5
+      replicas: 2
     depends_on:
       - reverse_proxy
 
   web_api:
-    build: ./api
+    build: ./web_api
     labels:
       traefik.enable: true
       traefik.http.routers.web_api.entrypoints: "websecure"
       traefik.http.routers.web_api.rule: Host(`localhost`) && PathPrefix(`/api`)
-      traefik.http.services.portainer.loadbalancer.server.port: 9000
       traefik.http.services.web_api.loadBalancer.sticky.cookie: true
       traefik.http.services.web_api.loadBalancer.sticky.cookie.name: web_api_cookie
       traefik.http.routers.web_api.tls: true
     deploy:
-      replicas: 5
+      replicas: 2
     depends_on:
       - reverse_proxy
