--- a/webServer/docker/website/Dockerfile
+++ b/webServer/docker/website/Dockerfile
@@ -3,4 +3,4 @@ LABEL authors="quentinsurdez"
 
 EXPOSE 80
 COPY . /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# COPY nginx.conf /etc/nginx/conf.d/default.conf
