--- a/webServer/docker/website/nginx.conf
+++ b/webServer/docker/website/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name memesarefun.ch;
-    root /var/www/html;
+    root /usr/share/nginx/html;
 
     location / {
         try_files $uri $uri/ =404;
