--- a/webServer/docker/website/Dockerfile
+++ b/webServer/docker/website/Dockerfile
@@ -2,5 +2,5 @@ FROM nginx
 LABEL authors="quentinsurdez"
 
 EXPOSE 80
-COPY . /usr/share/nginx/html
-# COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./static /usr/share/nginx/html
+COPY ./conf/nginx.conf /etc/nginx/conf.d/default.conf
