--- a/webServer/docker/compose.yaml
+++ b/webServer/docker/compose.yaml
@@ -12,6 +12,7 @@ services:
 
     labels:
       traefik.http.routers.dash.entrypoints: "websecure"
+      traefik.http.routers.dash.service: api@internal
       traefik.http.routers.dash.rule: Host(`dash.localhost`)
       traefik.http.routers.dash.tls: true
 
